cmake_minimum_required(VERSION 3.9)
project(portfelProjekt)

set(CMAKE_CXX_STANDARD 11)

add_executable(portfelProjekt main.cpp Portfel.h Aktywa.cpp Aktywa.h Lokata.cpp Lokata.h JednostkiFunduszu.cpp JednostkiFunduszu.h ProduktStrukturyzowany.cpp ProduktStrukturyzowany.h Kontrakt.cpp Kontrakt.h Nieruchomosc.cpp Nieruchomosc.h KontoEmerytalne.cpp KontoEmerytalne.h Lista.h Portfel.cpp)